# ga-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  sonar-project.properties
extractor/: __init__.py  __main__.py  extractor.py
ga_extractor/: __init__.py  __main__.py  extractor.py
tests/: conftest.py  context.py  test_extractor.py
