[tool.poetry]
name = "ga-extractor"
version = "0.1.0"
description = "Tool for extracting Google Analytics data suitable for migrating to other platforms"
authors = ["Martin-Heinz1 <martin.heinz1@ibm.com>"]
license = "MIT"
keywords = [ "analytics", "google" ]
repository = "https://github.com/MartinHeinz/ga-extractor"
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
typer = "^0.4.0"
shellingham = "^1.4.0"
google-auth-oauthlib = "^0.5.1"
google-api-python-client = "^2.41.0"
PyYAML = "^6.0"
validators = "^0.18.2"
coverage = {extras = ["toml"], version = "^6.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ga-extractor = "ga_extractor.extractor:extractor"

[tool.coverage.run]
source = ['ga_extractor']

[tool.coverage.report]
show_missing = true

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MartinHeinz/ga-extractor/issues"
